--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
 
 <header>
-  Suivi de mon chien 🐾<br>
+  Suivi de mon chien 🐶<br>
   <small>© Pierre Charlier 2025 — Version 1.9d</small>
 </header>
 
